# Compiler

./: CLAUDE.md
dcc/: .gitignore  runcodegen.sh  rundataflow.sh  runoptimize.sh  runsamples.sh  runtest.sh
dcc/src/: CMakeLists.txt  Parser.h  Parser.ih  Parserbase.h  Scanner.h  Scanner.ih  Scannerbase.h  decaf.l  decaf.y  example.dcf  lex.cc  main.cpp  parse.cc
dcc/src/ir/: CMakeLists.txt  Ir.h  IrAssignExpr.cpp  IrAssignExpr.h  IrBase.h  IrBasicBlock.cpp  IrBasicBlock.h  IrBinaryExpr.cpp  IrBinaryExpr.h  IrBlock.cpp  IrBlock.h  IrBoolLiteral.cpp  IrBoolLiteral.h  IrBooleanExpr.cpp  IrBooleanExpr.h  IrBreakStmt.cpp  IrBreakStmt.h  IrCaseStmt.cpp  IrCaseStmt.h  IrCharLiteral.h  IrClass.cpp  IrClass.h  IrCommon.cpp  IrCommon.h  IrContinueStmt.cpp  IrContinueStmt.h  IrDoWhileStmt.cpp  IrDoWhileStmt.h  IrDoubleLiteral.cpp  IrDoubleLiteral.h  IrExprStmt.cpp  IrExprStmt.h  IrExpression.h  IrFieldDecl.cpp  IrFieldDecl.h  IrForStmt.cpp  IrForStmt.h  IrGotoStmt.cpp  IrGotoStmt.h  IrIdentifier.cpp  (+39 more)
dcc/src/irLow/: IrTAC.h
dcc/src/tests/: CMakeLists.txt  SymbolTableTests.cpp  SymbolTableTests.h  main.cpp
dcc/testdata/codegen/: 06-control-flow.dcf  07-recursion.dcf  08-array.dcf  10-bounds.dcf  11-big-array.dcf  14-shortcircuit.dcf  16-qsort.dcf  17-comparisons.dcf  18-boolops.dcf  19-forloops.dcf  20-funcparams.dcf  22-doubleexpr.dcf  24-doublemath2.dcf  39-cse.dcf  40-forloopexpr.dcf  77-recursion.dcf  85-not.dcf  88-array.dcf  89-array.dcf
dcc/testdata/codegen/output/: 09-global.out  10-bounds.out  17-comparisons.out  18-boolops.out  19-forloops.out  20-funcparams.out  24-doublemath2.out  40-forloopexpr.out  89-array.out
dcc/testdata/dataflow/: cse-15.dcf
dcc/testdata/optimizer/basicblocks/: bb-01.dcf  bb-02.dcf  bb-03.dcf
dcc/testdata/optimizer/correctness/: 06-control-flow.dcf  08-array.dcf  09-global.dcf  11-big-array.dcf  12-huge.dcf  14-shortcircuit.dcf  16-qsort.dcf  17-divide.dcf  (+13 more)
dcc/testdata/samples/: bad1.dcf  bad10.dcf  bad11.dcf  bad12.dcf  bad13.dcf  bad2.dcf  bad3.dcf  bad4.dcf  bad5.dcf  bad6.dcf  bad7.dcf  bad8.dcf  bad9.dcf  matrix.dcf  new.dcf  queue.dcf  stack.dcf  t1.dcf  t10.dcf  t12.dcf  t13.dcf  t2.dcf  t3.dcf  t4.dcf  t5.dcf  t6.dcf  t7.dcf  t9.dcf
dcc/testdata/samples-checkpoint/: bad2.dcf  bad6.dcf  bad9.dcf  blackjack.dcf  matrix.dcf  t1.dcf  t2.dcf  t4.dcf  t6.dcf  t9.dcf
dcc/testdata/semantic/: bad2.dcf  bad23.dcf  bad28.dcf  bad29.dcf  bad3.dcf  bad4.dcf  bad5.dcf  illegal-12.dcf  legal-01.dcf
project1/: runtest.sh
project1/src/: Makefile  Parser.h  Parser.ih  Scanner.h  Scanner.ih  decaf.g  decaf.lex  decaf.lpp  decaf.y  example.d  main.cpp
project2/: .gitignore  runtest.sh
project2/src/: CMakeLists.txt  IrAssignStmt.h  IrBase.h  IrBinaryExpr.h  IrBlock.h  IrBoolLiteral.h  IrBooleanExpr.h  IrBreakStmt.h  IrCharLiteral.h  IrClass.h  IrCommon.h  IrContinueStmt.h  IrExprStmt.h  IrExpression.h  IrFieldDecl.h  IrForStmt.h  IrIdentifier.h  IrIfStmt.h  IrIntLiteral.h  IrLiteral.h  IrLocation.h  IrMethodCallStmt.h  IrMethodDecl.h  IrPlusAssignStmt.h  IrReturnStmt.h  IrStatement.h  IrVarDecl.h  Makefile  Parser.h  Parser.ih  Scanner.h  ScannerStreambuf.cpp  ScannerStreambuf.h  decaf.g  decaf.y  example.dcf  main.cpp  semanticchecks.dcf
project2/src/ir/: Ir.h  IrAssignExpr.cpp  IrAssignExpr.h  IrAssignStmt.h  IrBase.h  IrBinaryExpr.cpp  IrBinaryExpr.h  IrBlock.cpp  IrBlock.h  IrBoolLiteral.h  IrBooleanExpr.cpp  IrBooleanExpr.h  IrBreakStmt.cpp  IrBreakStmt.h  IrCharLiteral.h  IrClass.cpp  IrClass.h  IrCommon.cpp  IrCommon.h  IrContinueStmt.cpp  IrContinueStmt.h  IrExprStmt.cpp  IrExprStmt.h  IrExpression.h  IrFieldDecl.cpp  IrFieldDecl.h  IrForStmt.cpp  IrForStmt.h  IrIdentifier.cpp  IrIdentifier.h  IrIfStmt.cpp  IrIfStmt.h  IrIntLiteral.h  IrLiteral.h  IrLocation.cpp  IrLocation.h  IrMethodCall.cpp  IrMethodCall.h  IrMethodDecl.cpp  IrMethodDecl.h  (+11 more)
project3/src/: Parser.ih  decaf.y
project3/src/ir/: IrAssignExpr.h  IrBinaryExpr.cpp  IrBlock.cpp  IrBooleanExpr.cpp  IrBooleanExpr.h  IrBreakStmt.cpp  IrCharLiteral.h  IrClass.h  IrContinueStmt.h  IrExprStmt.h  IrFieldDecl.h  IrForStmt.h  IrIdentifier.h  IrIfStmt.h  IrIntLiteral.h  IrLocation.cpp  IrMethodCall.h  IrMethodDecl.cpp  IrReturnStmt.cpp  IrSymbolTable.cpp  IrTravCtx.cpp
(+28 files in other folders)
